# rome_py

./: README.md  \  package.xml  setup.py
post/post_interfaces/: CMakeLists.txt
post/post_station/: package.xml  setup.py
post_core/: package.xml  setup.cfg  setup.py
post_core/launch/: multi_station_launch.py
post_interfaces/: CMakeLists.txt  package.xml
post_interfaces/msg/: Parcel.msg  StationKill.msg
post_scripts/: SSHPI.sh  common_build.sh  common_dds.sh  common_git.sh  common_ssh.sh  cyclone_source.sh  cyclonedds.xml  cyclonedds_multicast.xml  cyclonedds_source.sh  cyclonedds_unicast.xml  fast_source copy.sh  fast_source.sh  fastdds.xml  fastdds_unicast.xml  fastrtps_multicast.xml  fastrtps_source.sh  launch_parcels.sh  logParser.py  parcel_analysis.csv  preprocessData.py  removeLogs.sh  setup_and_launch.sh  start_all_stations.sh  sync_working_repos.sh  update_local_repo.sh  zenohdds_multicast.json  zenohdds_source copy.sh  zenohdds_source.sh
post_scripts/common/: common.sh
post_scripts/dds/: cyclonedds_source.sh  cyclonedds_unicast.xml  fastrtps_source.sh  fastrtps_unicast.xml
post_scripts/graveyard/: graveyard-sender_station.csv  log-sender_station-rospi-0-desktop.txt
post_scripts/logs/: log-sender_station.csv
post_scripts/old-log-parsing/: logParser.py  removeLogs.sh
post_station/: setup.cfg  setup.py
post_station/launch/: faux_stations_launch.py  (+1 more)
rome_interfaces/: CMakeLists.txt  package.xml
rome_py/: package.xml  relay.py  setup.cfg  setup.py
rome_scripts/: .cyclonedds.xml  cyclone_source.sh  launch_batons.sh  launch_relay.sh
(+73 files in other folders)
