<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rome_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dev@todo.todo">dev</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend> <!-- This is required for Python-based ROS 2 packages -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Executable dependencies -->
  <exec_depend>python3</exec_depend> <!-- Specifies the dependency on Python3 -->
  <exec_depend>rclpy</exec_depend>   <!-- ROS 2 Python client library -->
  <exec_depend>std_msgs</exec_depend> <!-- Standard ROS 2 message types -->

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export configuration -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

